Changes in version 0.1.6

* logical options can have default values.

--------------------------------------------------------------------------

Changes in version 0.1.5

* head and foot of the message are properly wrapped.
* qqcat: text are wrapped with fixed width per line by default

---------------------------------------------------------------------------

Changes in version 0.1.4

* add `head` and `foot` arguments in `GetoptLong()` which set the head and foot
  of the help message
* change vignette format to Rmd

----------------------------------------------------------------------------

Changes in version 0.1.3

* use `interactive()` to test whether under command-line mode
* update according to testthat 1.0.0

----------------------------------------------------------------------------

Changes in version 0.1.2
-----------------------------------------------------------------------------

* update option functons with new version of GlobalOptions
* set `source()` as internal

Changes in version 0.1.1
-----------------------------------------------------------------------------

* add `source` which also allow specifying arguments in interactive session.

Changes in version 0.1.0
-----------------------------------------------------------------------------

* depends on `methods` package
* add `GetOptions` which is the same as `GetoptLong`

Changes in version 0.0.9
-----------------------------------------------------------------------------

* modified tests according to changes of `GlobalOptions` package

Changes in version 0.0.8
-----------------------------------------------------------------------------

* check atomic vector in `qq`
* If the interpolated variable is equal to NULL, it will be converted to "".

Changes in version 0.0.7
------------------------------------------------------------------------------

* vignettes are rendered by knitr
* use `GlobalOptions` package to take care of the global settings