@@ -23,6 +23,7 @@ Supported options are following:
 \describe{
   \item{cat_prefix}{prefix of the string which is printed by \code{\link{qqcat}}}
   \item{cat_verbose}{whether to print text by \code{\link{qqcat}}}
+  \item{cat_strwrap}{whether call \code{\link[base]{strwrap}} to wrap the string}
   \item{code.pattern}{code pattern for variable interpolation}
 }
 }
